# sentiment

./: .gitignore  notebook.ipynb  pyproject.toml
app/: input.json  main.py
