[tool.poetry]
authors = ["JulienDataScientist"]
name = "sentiment"
version = "0.1.0"
description = ""

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
mlflow = "^2.19.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
